--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                             <li><a href="courses.html">Tất cả khóa học</a></li>
                             <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
                             <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
-                            <li><a href="./courses-detail/graphic-design-detail.html">Thiết kế đồ họa</a></li>
+                            <li><a href="./courses-detail/office-it.html">Tin Học Văn Phòng</a></li>
                             <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
                             <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
                         </ul>
@@ -61,8 +61,9 @@
             </div>
             <div class="about-content-grid">
                 <div class="about-text">
-                    <p>Chào mừng bạn đến với PLT Solutions, nơi chúng tôi tin rằng giáo dục là chìa khóa mở ra tiềm năng con người. Được thành lập với sứ mệnh mang đến những khóa học chất lượng cao, dễ tiếp cận cho mọi người ở mọi nơi, PLT Solutions đã trở thành nền tảng đáng tin cậy cho hàng ngàn học viên trên toàn thế giới.</p>
-                    <p>Chúng tôi tự hào cung cấp một thư viện khóa học đa dạng, từ phát triển kỹ năng mềm đến các lĩnh vực chuyên môn sâu như công nghệ thông tin, kinh doanh, thiết kế đồ họa và nhiều hơn nữa. Mỗi khóa học đều được biên soạn và giảng dạy bởi các chuyên gia, giảng viên hàng đầu trong lĩnh vực của họ, đảm bảo kiến thức cập nhật và thực tiễn.</p>
+                    <p>Công ty TNHH PLT SOLUTIONS được thành lập từ năm 2019 với tiền thân là hộ kinh doanh cá thể bắt đầu hoạt động từ năm 2016, đến nay thương hiệu PLT Solutions đã và đang từng bước khẳng định với khách hàng về uy tín và chất lượng dịch vụ vượt trội.</p>
+                    <p>Với định hướng sẽ trở thành “Nhà cung cấp dịch vụ số đáp ứng mọi yêu cầu của khách hàng” cùng sứ mệnh “Tôn vinh sự sáng tạo trong công nghệ, dẫn đầu xu hướng công nghệ mới”, PLT Solutions đã không ngừng đầu tư, phát triển và ứng dụng các công nghệ tiên tiến nhất trên từng sản phẩm của mình. Có thể nói, khoa học công nghệ luôn là động lực thúc đẩy mỗi cá nhân trong công ty tự hoàn thiện và phát triển. PLT Solutions không ngừng nỗ lực mở rộng hoạt động kinh doanh của mình từ việc bán và cho thuê các thiết bị công nghệ hiện đại đến hoạt động giáo dục, Marketing online, thiết kế Websites,…</p>
+                    <p>Sản phẩm của PLT Solutions đang từng bước được khách hàng đón nhận vì sự tận tình và cẩn thận trong từng chi tiết, tỉ mỉ, chu đáo trong từng dịch vụ, mang lại một trải nghiệm mới cho khách hàng. Trong tương lai, PLT Solutions sẽ tiếp tục đầu tư vào ngành công nghệ, đặc biệt là công nghệ giáo dục.</p>
                     <ul>
                         <li><i class="fas fa-check-circle"></i> Giảng viên chuyên nghiệp, giàu kinh nghiệm.</li>
                         <li><i class="fas fa-check-circle"></i> Nội dung khóa học được cập nhật thường xuyên.</li>
@@ -72,7 +73,7 @@
                     <a href="courses.html" class="btn btn-primary mt-4">Khám phá ngay</a>
                 </div>
                 <div class="about-image">
-                    <img src="image/anh7.jpg" alt="Về chúng tôi PLT Solutions">
+                    <img src="image/about.png" alt="Về chúng tôi PLT Solutions">
                 </div>
             </div>
         </div>
@@ -98,7 +99,7 @@
                     <ul>
                         <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
                         <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
-                        <li><a href="./courses-detail/graphic-design-detail.html">Thiết kế đồ họa</a></li>
+                        <li><a href="./courses-detail/office-it.html">Tin Học Văn Phòng</a></li>
                         <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
                         <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
                     </ul>
