--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
                             <li><a href="courses.html">Tất cả khóa học</a></li>
                             <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
                             <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
-                            <li><a href="./courses-detail/graphic-design-detail.html">Thiết kế đồ họa</a></li>
+                            <li><a href="./courses-detail/office-it.html">Tin Học Văn Phòng</a></li>
                             <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
                             <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
                         </ul>
@@ -138,7 +138,7 @@
                     <ul>
                         <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
                         <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
-                        <li><a href="./courses-detail/graphic-design-detail.html">Thiết kế đồ họa</a></li>
+                        <li><a href="./courses-detail/office-it.html">Tin Học Văn Phòng</a></li>
                         <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
                         <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
                     </ul>
