--- a/courses.html
+++ b/courses.html
@@ -26,7 +26,7 @@
                             <li><a href="courses.html">Tất cả khóa học</a></li>
                             <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềmg</a></li>
                             <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
-                            <li><a href="./courses-detail/graphic-design-detail.html">Thiết kế đồ họa</a></li>
+                            <li><a href="./courses-detail/office-it.html">Tin Học Văn Phòng</a></li>
                             <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
                             <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
                         </ul>
@@ -208,9 +208,9 @@
 
                 <div class="course-item">
                     <div class="course-thumbnail">
-                        <img src="image/anh6.jpg" alt="Graphic Design Course">
+                        <img src="image/office-it.jpg" alt="Graphic Design Course">
                         <div class="course-category">
-                            <a href="#">Thiết kế đồ họa</a>
+                            <a href="./courses-detail/office-it.html">Tin Học Văn Phòng</a>
                         </div>
                     </div>
                     <div class="course-content">
@@ -220,17 +220,17 @@
                                 <i class="fas fa-star"></i> 4.7 (210)
                             </span>
                         </div>
-                        <h3 class="course-title"><a href="#">Mastering Adobe Photoshop & Illustrator</a></h3>
+                        <h3 class="course-title"><a href="./courses-detail/office-it.html">Khoá Học Tin Học Văn Phòng Căn Bản (Word, Excel, Powerpoint)</a></h3>
                         <p class="course-description">
-                            Thiết kế đồ họa chuyên nghiệp với bộ công cụ Adobe.
+                            Nắm vững các kĩ năng tin học văn học cơ bản (Word, Excel, Powerpoint).
                         </p>
                         <div class="course-footer">
-                            <span class="course-price">$69.99</span>
-                            <a href="courses-detail/graphic-design-detail.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
+                            <span class="course-price">4.500.000VNĐ</span>
+                            <a href="courses-detail/office-it.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
                             <button class="btn btn-sm btn-success add-to-cart-btn"
                                 data-course-id="web-dev-fullstack"
                                 data-course-name="Khóa học Phát triển Web Toàn diện từ A-Z"
-                                data-course-price="49.99">Thêm vào giỏ hàng</button>
+                                data-course-price="4.500.000VNĐ">Thêm vào giỏ hàng</button>
                         </div>
                     </div>
                 </div>
@@ -257,7 +257,7 @@
                     <ul>
                         <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
                         <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
-                        <li><a href="./courses-detail/graphic-design-detail.html">Thiết kế đồ họa</a></li>
+                        <li><a href="./courses-detail/office-it.html">Tin Học Văn Phòng</a></li>
                         <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
                         <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
                     </ul>
