--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -27,7 +27,7 @@
                             <li><a href="courses.html">Tất cả khóa học</a></li>
                             <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
                             <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
-                            <li><a href="#">Thiết kế đồ họa</a></li>
+                            <li><a href="./courses-detail/office-it.html">Tin Học Văn Phòng</a></li>
                         </ul>
                     </li>
                     <li><a href="about.html">Về chúng tôi</a></li>
