--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
                             <li><a href="courses.html">Tất cả khóa học</a></li>
                             <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
                             <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
-                            <li><a href="./courses-detail/graphic-design-detail.html">Thiết kế đồ họa</a></li>
+                            <li><a href="./courses-detail/office-it.html">Tin Học Văn Phòng</a></li>
                             <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
                             <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
                         </ul>
@@ -64,17 +64,17 @@
             <div class="blog-grid">
                 <div class="blog-item">
                     <div class="blog-thumbnail">
-                        <img src="img/blog-1.jpg" alt="Bài viết blog 1">
-                        <span class="blog-category">Giáo dục</span>
+                        <img src="image/blog1.png" alt="Bài viết blog 1">
+                        <span class="blog-category">Kiểm Thử Phần Mềm</span>
                     </div>
                     <div class="blog-content">
                         <div class="blog-meta">
-                            <span><i class="fas fa-calendar-alt"></i> 01 Tháng 6, 2024</span>
+                            <span><i class="fas fa-calendar-alt"></i> 26 Tháng 5, 2025</span>
                             <span><i class="fas fa-user"></i> Admin</span>
                         </div>
-                        <h3 class="blog-title"><a href="#">5 Mẹo để Học Trực Tuyến Hiệu Quả</a></h3>
+                        <h3 class="blog-title"><a href="#">Giới thiệu và hướng dẫn sử dụng Notion</a></h3>
                         <p class="blog-description">
-                            Khám phá những chiến lược đã được chứng minh để tối ưu hóa trải nghiệm học tập online của bạn.
+                            Notion là một ứng dụng quản lý công việc và ghi chú đa năng, cho phép bạn tạo ra các trang (page) linh hoạt để ghi chép, quản lý dự án, lập kế hoạch, theo dõi công việc cá nhân hoặc nhóm. Điểm mạnh của Notion là khả năng tùy biến cao và giao diện trực quan, dễ sử dụng.
                         </p>
                         <a href="#" class="read-more">Đọc thêm <i class="fas fa-arrow-right"></i></a>
                     </div>
@@ -82,17 +82,17 @@
 
                 <div class="blog-item">
                     <div class="blog-thumbnail">
-                        <img src="img/blog-2.jpg" alt="Bài viết blog 2">
-                        <span class="blog-category">Kỹ năng</span>
+                        <img src="image/blog2.png" alt="Bài viết blog 2">
+                        <span class="blog-category">Kiểm Thử Phần Mềm</span>
                     </div>
                     <div class="blog-content">
                         <div class="blog-meta">
                             <span><i class="fas fa-calendar-alt"></i> 28 Tháng 5, 2024</span>
-                            <span><i class="fas fa-user"></i> Jane Doe</span>
+                            <span><i class="fas fa-user"></i> Mr PLT</span>
                         </div>
-                        <h3 class="blog-title"><a href="#">Xây Dựng Kỹ Năng Tư Duy Phản Biện</a></h3>
+                        <h3 class="blog-title"><a href="#">Quy trình tổng quát của Kiểm thử phần mềm</a></h3>
                         <p class="blog-description">
-                            Tư duy phản biện là yếu tố then chốt giúp bạn phân tích thông tin và đưa ra quyết định tốt hơn.
+                            Kiểm thử thực chất là một quy trình. Quá trình này bắt đầu từ việc lập kế hoạch kiểm thử, sau đó là thiết kế các trường hợp kiểm thử, chuẩn bị cho việc thực thi và đánh giá kết quả thực thi cho đến khi kết thúc hoạt động kiểm thử.
                         </p>
                         <a href="#" class="read-more">Đọc thêm <i class="fas fa-arrow-right"></i></a>
                     </div>
@@ -100,17 +100,17 @@
 
                 <div class="blog-item">
                     <div class="blog-thumbnail">
-                        <img src="img/blog-3.jpg" alt="Bài viết blog 3">
-                        <span class="blog-category">Công nghệ</span>
+                        <img src="image/blog3.png" alt="Bài viết blog 3">
+                        <span class="blog-category">Kiểm Thử Phần Mềm</span>
                     </div>
                     <div class="blog-content">
                         <div class="blog-meta">
                             <span><i class="fas fa-calendar-alt"></i> 25 Tháng 5, 2024</span>
-                            <span><i class="fas fa-user"></i> John Smith</span>
+                            <span><i class="fas fa-user"></i> Mr PLT</span>
                         </div>
-                        <h3 class="blog-title"><a href="#">Tương Lai của AI trong Giáo Dục</a></h3>
+                        <h3 class="blog-title"><a href="#">Static Testing – Kiểm Thử Tĩnh</a></h3>
                         <p class="blog-description">
-                            Trí tuệ nhân tạo đang định hình lại cách chúng ta học và dạy như thế nào.
+                            STATIC TESTING – KIỂM THỬ TĨNH.
                         </p>
                         <a href="#" class="read-more">Đọc thêm <i class="fas fa-arrow-right"></i></a>
                     </div>
@@ -118,17 +118,17 @@
 
                 <div class="blog-item">
                     <div class="blog-thumbnail">
-                        <img src="img/blog-4.jpg" alt="Bài viết blog 4">
-                        <span class="blog-category">Phát triển bản thân</span>
+                        <img src="image/blog4.png" alt="Bài viết blog 4">
+                        <span class="blog-category">Kiểm Thử Phần Mềm</span>
                     </div>
                     <div class="blog-content">
                         <div class="blog-meta">
                             <span><i class="fas fa-calendar-alt"></i> 20 Tháng 5, 2024</span>
-                            <span><i class="fas fa-user"></i> Sarah Lee</span>
+                            <span><i class="fas fa-user"></i> Mr PLT</span>
                         </div>
-                        <h3 class="blog-title"><a href="#">Quản Lý Thời Gian Hiệu Quả cho Người Bận Rộn</a></h3>
+                        <h3 class="blog-title"><a href="#">User Interface Testing Checklist - Danh sách Kiểm Tra Giao Diện Người Dùng</a></h3>
                         <p class="blog-description">
-                            Học cách sắp xếp ưu tiên và tận dụng tối đa thời gian của bạn mỗi ngày.
+                            USER INTERFACE TESTING CHECKLIST
                         </p>
                         <a href="#" class="read-more">Đọc thêm <i class="fas fa-arrow-right"></i></a>
                     </div>
@@ -136,17 +136,17 @@
 
                 <div class="blog-item">
                     <div class="blog-thumbnail">
-                        <img src="img/blog-5.jpg" alt="Bài viết blog 5">
-                        <span class="blog-category">Mạng xã hội</span>
+                        <img src="image/blog5.png" alt="Bài viết blog 5">
+                        <span class="blog-category">Marketing Online</span>
                     </div>
                     <div class="blog-content">
                         <div class="blog-meta">
-                            <span><i class="fas fa-calendar-alt"></i> 15 Tháng 5, 2024</span>
-                            <span><i class="fas fa-user"></i> David Chen</span>
+                            <span><i class="fas fa-calendar-alt"></i> 06 Tháng 5, 2025</span>
+                            <span><i class="fas fa-user"></i> Mr PLT</span>
                         </div>
-                        <h3 class="blog-title"><a href="#">Xu Hướng Marketing Trên TikTok Năm 2024</a></h3>
+                        <h3 class="blog-title"><a href="#">Cách viết bài chuẩn SEO lĩnh vực du lịch hiệu quả</a></h3>
                         <p class="blog-description">
-                            Khám phá cách các doanh nghiệp đang tận dụng TikTok để tiếp cận khách hàng mới.
+                            Bài viết quảng cáo, giới thiệu sản phẩm, dịch vụ là một trong những công cụ phục vụ đắc lực đối với mục đích kinh doanh đang được nhiều đơn vị khai thác du lịch áp dụng. Song thực tế cách viết bài chuẩn SEO lĩnh vực du lịch vẫn còn khá máy móc khi tập trung chủ yếu vào những mô típ đã quá quen thuộc không còn gây được hứng thú cho khách hàng như giới thiệu tour du lịch, địa điểm vui chơi giải trí hay giá thành, tiện ích mà không có sự mới lạ, khác biệt.
                         </p>
                         <a href="#" class="read-more">Đọc thêm <i class="fas fa-arrow-right"></i></a>
                     </div>
@@ -154,22 +154,28 @@
 
                 <div class="blog-item">
                     <div class="blog-thumbnail">
-                        <img src="img/blog-6.jpg" alt="Bài viết blog 6">
-                        <span class="blog-category">Kinh doanh</span>
+                        <img src="image/blog6.jpg" alt="Bài viết blog 6">
+                        <span class="blog-category">Marketing Online</span>
                     </div>
                     <div class="blog-content">
                         <div class="blog-meta">
-                            <span><i class="fas fa-calendar-alt"></i> 10 Tháng 5, 2024</span>
-                            <span><i class="fas fa-user"></i> Emily Wong</span>
+                            <span><i class="fas fa-calendar-alt"></i> 06 Tháng 5, 2025</span>
+                            <span><i class="fas fa-user"></i> Mr PLT</span>
                         </div>
-                        <h3 class="blog-title"><a href="#">Khởi Nghiệp Thành Công: Bài Học Từ Các CEO</a></h3>
+                        <h3 class="blog-title"><a href="#">Khám phá lịch sử thú vị của Bánh xe màu sắc – Công cụ đắc lực của người họa sĩ</a></h3>
                         <p class="blog-description">
-                            Những lời khuyên quý báu từ những người đã thành công trong lĩnh vực khởi nghiệp.
+                            Đã bao giờ bạn tự hỏi làm thế nào mà các họa sĩ có thể phối màu một cách hoàn hảo nhất? Câu trả lời chính là Bánh xe màu sắc (Color Wheel) – cơ sở căn bản của lý thuyết màu, công cụ đắc lực hỗ trợ các họa sĩ trong quá trình phối màu.
                         </p>
                         <a href="#" class="read-more">Đọc thêm <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
-
+            <div class="pagination">
+                <a href="#" class="disabled">&laquo; Trước</a>
+                <a href="#" class="current">1</a>
+                <a href="#">2</a>
+                <a href="#">3</a>
+                <a href="#">Sau &raquo;</a>
+            </div>   
             </div>
             <div class="text-center mt-5">
                 <a href="#" class="btn btn-primary btn-lg">Xem thêm bài viết</a>
@@ -197,7 +203,7 @@
                     <ul>
                         <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
                         <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
-                        <li><a href="./courses-detail/graphic-design-detail.html">Thiết kế đồ họa</a></li>
+                        <li><a href="./courses-detail/office-it.html">Tin Học Văn Phòng</a></li>
                         <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
                         <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
                     </ul>
