--- a/cart.html
+++ b/cart.html
@@ -26,7 +26,7 @@
                             <li><a href="courses.html">Tất cả khóa học</a></li>
                             <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
                             <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
-                            <li><a href="./courses-detail/graphic-design-detail.html">Thiết kế đồ họa</a></li>
+                            <li><a href="./courses-detail/office-it.html">Tin Học Văn Phòng</a></li>
                             <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
                             <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
                         </ul>
@@ -34,6 +34,8 @@
                     <li><a href="about.html">Về chúng tôi</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="contact.html">Liên hệ</a></li>
+                    <li><a href="privacy-policy.html">Chính sách bảo mật</a></li>
+                    <li><a href="terms-of-service.html">Điều khoản sử dụng</a></li>
                 </ul>
             </nav>
             <div class="header-actions">
@@ -90,7 +92,7 @@
                     <ul>
                         <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
                         <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
-                        <li><a href="./courses-detail/graphic-design-detail.html">Thiết kế đồ họa</a></li>
+                        <li><a href="./courses-detail/office-it.html">Tin Học Văn Phòng</a></li>
                         <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
                         <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
                     </ul>
