--- a/courses-detail/photography-detail.html
+++ b/courses-detail/photography-detail.html
@@ -27,7 +27,7 @@
                             <li><a href="../courses.html">Tất cả khóa học</a></li>
                             <li><a href="software-testing.html">Kiểm Thử Phần Mềm</a></li>
                             <li><a href="automated-testing.html">Kiểm Thử Tự Động</a></li>
-                            <li><a href="graphic-design-detail.html">Thiết kế đồ họa</a></li>
+                            <li><a href="office-it.html">Tin Học Văn Phòng</a></li>
                             <li><a href="data-science-detail.html">Khoa học dữ liệu</a></li>
                             <li><a href="photography-detail.html">Nhiếp ảnh</a></li>
                         </ul>
@@ -296,7 +296,7 @@
                     <ul>
                         <li><a href="automated-testing.html">Kiểm Thử Tự Động</a></li>
                         <li><a href="software-testing.html">Kiểm Thử Phần Mềm</a></li>
-                        <li><a href="#">Thiết kế đồ họa</a></li>
+                        <li><a href="office-it.html">Tin Học Văn Phòng</a></li>
                         <li><a href="#">Khoa học dữ liệu</a></li>
                         <li><a href="#">Nhiếp ảnh</a></li>
                     </ul>
