--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <li><a href="courses.html">Tất cả khóa học</a></li>
                             <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
                             <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
-                            <li><a href="./courses-detail/graphic-design-detail.html">Thiết kế đồ họa</a></li>
+                            <li><a href="./courses-detail/office-it.html">Tin Học Văn Phòng</a></li>
                             <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
                             <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
                         </ul>
@@ -208,9 +208,9 @@
 
                 <div class="course-item">
                     <div class="course-thumbnail">
-                        <img src="image/tinhoc.jpg" alt="Graphic Design Course">
+                        <img src="image/office-it.jpg" alt="Graphic Design Course">
                         <div class="course-category">
-                            <a href="./courses-detail/graphic-design-detail.html">Tin Học Văn Phòng</a>
+                            <a href="./courses-detail/office-it.html">Tin Học Văn Phòng</a>
                         </div>
                     </div>
                     <div class="course-content">
@@ -220,13 +220,13 @@
                                 <i class="fas fa-star"></i> 4.7 (210)
                             </span>
                         </div>
-                        <h3 class="course-title"><a href="./courses-detail/graphic-design-detail.html">Khoá Học Tin Học Văn Phòng Căn Bản (Word, Excel, Powerpoint)</a></h3>
+                        <h3 class="course-title"><a href="./courses-detail/office-it.html">Khoá Học Tin Học Văn Phòng Căn Bản (Word, Excel, Powerpoint)</a></h3>
                         <p class="course-description">
                             Nắm vững các kĩ năng tin học văn học cơ bản (Word, Excel, Powerpoint)
                         </p>
                         <div class="course-footer">
                             <span class="course-price">4.500.000VNĐ</span>
-                            <a href="courses-detail/graphic-design-detail.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
+                            <a href="courses-detail/office-it.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
                         </div>
                     </div>
                 </div>
@@ -256,7 +256,7 @@
                     <ul>
                         <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
                         <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
-                        <li><a href="./courses-detail/graphic-design-detail.html">Thiết kế đồ họa</a></li>
+                        <li><a href="./courses-detail/office-it.html">Tin Học Văn Phòng</a></li>
                         <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
                         <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
                     </ul>
