--- a/courses-detail/business-management-detail.html
+++ b/courses-detail/business-management-detail.html
@@ -28,7 +28,7 @@
                             <li><a href="software-testing.html">Kiểm Thử Phần Mềm</a></li>
                             <li><a href="automated-testing.html">Kiểm Thử Tự Động</a></li>
                             <li><a href="office-it.html">Tin Học Văn Phòng</a></li>
-                            <li><a href="data-science-detail.html">Khoa học dữ liệu</a></li>
+                            <li><a href="basic-software-testing.html">Kiểm Thử Phần Mềm Căn Bản</a></li>
                             <li><a href="photography-detail.html">Nhiếp ảnh</a></li>
                         </ul>
                     </li>
@@ -297,7 +297,7 @@
                         <li><a href="automated-testing.html">Kiểm Thử Tự Động</a></li>
                         <li><a href="software-testing.html">Kiểm Thử Phần Mềm</a></li>
                         <li><a href="office-it.html">Tin Học Văn Phòng</a></li>
-                        <li><a href="#">Khoa học dữ liệu</a></li>
+                        <li><a href="basic-software-testing.html">Kiểm Thử Phần Mềm Căn Bản</a></li>
                         <li><a href="#">Nhiếp ảnh</a></li>
                     </ul>
                 </div>
