--- a/login.html
+++ b/login.html
@@ -28,6 +28,8 @@
                             <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
                             <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
                             <li><a href="./courses-detail/office-it.html">Tin Học Văn Phòng</a></li>
+                            <li><a href="./courses-detail/basic-software-testing.html">Kiểm Thử Phần Mềm Căn Bản</a></li>
+                            <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
                         </ul>
                     </li>
                     <li><a href="about.html">Về chúng tôi</a></li>
@@ -95,7 +97,7 @@
                         <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
                         <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
                         <li><a href="./courses-detail/office-it.html">Tin Học Văn Phòng</a></li>
-                        <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
+                        <li><a href="./courses-detail/basic-software-testing.html">Kiểm Thử Phần Mềm Căn Bản</a></li>
                         <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
                     </ul>
                 </div>
@@ -105,8 +107,8 @@
                         <li><a href="about.html">Về chúng tôi</a></li>
                         <li><a href="courses.html">Khóa học</a></li>
                         <li><a href="blog.html">Blog</a></li>
-                        <li><a href="#">Chính sách bảo mật</a></li>
-                        <li><a href="#">Điều khoản sử dụng</a></li>
+                        <li><a href="privacy-policy.html">Chính sách bảo mật</a></li>
+                        <li><a href="terms-of-service.html">Điều khoản sử dụng</a></li>
                     </ul>
                 </div>
                 <div class="footer-col contact-col">
