--- a/courses-detail/basic-software-testing.html
+++ b/courses-detail/basic-software-testing.html
@@ -16,7 +16,7 @@
     <header class="main-header">
         <div class="container">
             <a href="../index.html" class="logo">
-                <img src="img/logo.png" alt="Edrio Logo">
+                <img src="../image/anh2.png" alt="PLT Logo">
             </a>
             <nav class="main-nav">
                 <ul class="nav-list">
@@ -28,7 +28,7 @@
                             <li><a href="software-testing.html">Kiểm Thử Phần Mềm</a></li>
                             <li><a href="automated-testing.html">Kiểm Thử Tự Động</a></li>
                             <li><a href="office-it.html">Tin Học Văn Phòng</a></li>
-                            <li><a href="data-science-detail.html">Khoa học dữ liệu</a></li>
+                            <li><a href="basic-software-testing.html">Kiểm Thử Phần Mềm Căn Bản</a></li>
                             <li><a href="photography-detail.html">Nhiếp ảnh</a></li>>
                         </ul>
                     </li>
@@ -56,15 +56,15 @@
     <section class="page-hero-detail-section section-padding-small">
         <div class="container">
             <div class="breadcrumb">
-                <a href="../index.html">Trang chủ</a> / <a href="../courses.html">Khóa học</a> / Phát triển Web Toàn diện
+                <a href="../index.html">Trang chủ</a> / <a href="../courses.html">Khóa học</a> / Kiểm Thử Phần Mềm Căn Bản
             </div>
             <div class="course-detail-header">
                 <div class="course-detail-meta">
-                    <span class="course-category-pill">Phát triển Web</span>
+                    <span class="course-category-pill">Kiểm Thử Phần Mềm Căn Bản</span>
                     <span class="course-level">Tất cả cấp độ</span>
                 </div>
-                <h1 class="course-detail-title">Khóa học Phát triển Web Toàn diện từ A-Z</h1>
-                <p class="course-detail-tagline">Trở thành lập trình viên Full-stack chuyên nghiệp với HTML, CSS, JavaScript, React, Node.js và MongoDB.</p>
+                <h1 class="course-detail-title">Khóa học Kiểm Thử Phần Mềm Căn Bản Toàn diện từ A-Z</h1>
+                <p class="course-detail-tagline">Nắm Vững các Kiến Thức Căn Bản Về Kiểm Thử Phần Mềm.</p>
                 <div class="course-detail-info">
                     <div class="info-item">
                         <i class="fas fa-star"></i> 4.9 (2,500 đánh giá)
@@ -73,7 +73,7 @@
                         <i class="fas fa-users"></i> 15,000 học viên
                     </div>
                     <div class="info-item">
-                        <i class="fas fa-user"></i> Giảng viên: John Doe
+                        <i class="fas fa-user"></i> Giảng viên: Mr PLT
                     </div>
                 </div>
             </div>
@@ -84,24 +84,25 @@
         <div class="container course-detail-grid">
             <div class="course-left-col">
                 <div class="course-image-hero">
-                    <img src="img/course-detail-hero.jpg" alt="Web Development Course Detail">
+                    <img src="../image/basic-software-testing1.jpg" alt="Web Development Course Detail">
                 </div>
 
                 <div class="course-section overview-section">
                     <h3>Tổng quan khóa học</h3>
-                    <p>Khóa học này được thiết kế để đưa bạn từ con số 0 trở thành một nhà phát triển web full-stack có khả năng xây dựng các ứng dụng web phức tạp. Bạn sẽ học các công nghệ frontend và backend quan trọng nhất hiện nay.</p>
-                    <p>Chúng tôi tập trung vào việc học thông qua thực hành, với rất nhiều dự án thực tế và bài tập coding. Bạn sẽ xây dựng một danh mục các dự án để trình bày kỹ năng của mình cho nhà tuyển dụng tiềm năng.</p>
+                    <p>Nếu bạn đam mê công nghệ nhưng lại quá nhức đầu với code, hoặc có thể bạn đam mê với kiểm thử phần mềm nhưng không biết bắt đầu từ đâu.</p>
+                    <p>Đến với PLT Solutions các bạn sẽ được các giảng viên chuyên nghiệp có nhiều năm kinh nghiệm trong ngành phần mềm, tester… hướng dẫn cụ thể, giúp đỡ bạn những khó khăn trong việc học tập.</p>
+                    <p>Các bạn sẽ được tiếp xúc với các quy trình kiểm thử mới nhất, hay được sử dụng nhiều nhất trong các công ty phần mềm hiện nay, vì vậy bạn có thể đi làm ngay sau khi hoàn thành xong khóa học của PLT Solutions.</p>
                 </div>
 
                 <div class="course-section what-you-learn-section">
                     <h3>Bạn sẽ học được gì</h3>
                     <ul class="learn-list">
-                        <li><i class="fas fa-check-circle"></i> Xây dựng các trang web đáp ứng với HTML5 & CSS3.</li>
-                        <li><i class="fas fa-check-circle"></i> Lập trình tương tác với JavaScript và React.js.</li>
-                        <li><i class="fas fa-check-circle"></i> Phát triển API backend với Node.js & Express.</li>
-                        <li><i class="fas fa-check-circle"></i> Quản lý dữ liệu với cơ sở dữ liệu MongoDB.</li>
-                        <li><i class="fas fa-check-circle"></i> Triển khai ứng dụng web lên máy chủ.</li>
-                        <li><i class="fas fa-check-circle"></i> Kỹ năng làm việc nhóm và giải quyết vấn đề.</li>
+                        <li><i class="fas fa-check-circle"></i> Nắm vững các khái niệm cơ bản, nguyên lý và quy trình kiểm thử phần mềm theo chuẩn quốc tế ISTQB.</li>
+                        <li><i class="fas fa-check-circle"></i> Hiểu rõ các mức độ và loại kiểm thử phần mềm, từ kiểm thử đơn vị đến kiểm thử hệ thống và chấp nhận.</li>
+                        <li><i class="fas fa-check-circle"></i> Thành thạo các kỹ thuật thiết kế kiểm thử như kiểm thử hộp đen, hộp trắng, kiểm thử dựa trên kinh nghiệm,...</li>
+                        <li><i class="fas fa-check-circle"></i> Áp dụng quy trình quản lý kiểm thử chuyên nghiệp, bao gồm lập kế hoạch, theo dõi và báo cáo kết quả kiểm thử.</li>
+                        <li><i class="fas fa-check-circle"></i> Thực hành viết Test Cases và kiểm thử một dự án phần mềm thực tế để rèn kỹ năng kiểm thử ứng dụng.</li>
+                        <li><i class="fas fa-check-circle"></i> Phát triển kỹ năng làm việc nhóm thông qua các hoạt động phối hợp như tổ chức nhóm, giao tiếp nhóm và thuyết trình kết quả kiểm thử.</li>
                     </ul>
                 </div>
 
@@ -154,9 +155,9 @@
                 <div class="course-section instructor-section">
                     <h3>Giảng viên</h3>
                     <div class="instructor-card">
-                        <img src="img/instructor-john-doe.jpg" alt="John Doe" class="instructor-avatar">
+                        <img src="img/instructor-john-doe.jpg" alt="Mr PLT" class="instructor-avatar">
                         <div class="instructor-details">
-                            <h4>John Doe</h4>
+                            <h4>Mr PLT</h4>
                             <p class="instructor-title">Chuyên gia Phát triển Web Full-stack</p>
                             <p class="instructor-bio">Với hơn 10 năm kinh nghiệm trong lĩnh vực phát triển web, John Doe đã đào tạo hàng ngàn học viên thành công. Anh là một người đam mê chia sẻ kiến thức và luôn cập nhật những công nghệ mới nhất.</p>
                             <div class="instructor-stats">
@@ -242,23 +243,23 @@
             <div class="course-right-col">
                 <div class="course-sidebar">
                     <div class="sidebar-price">
-                        <span class="current-price">$49.99</span>
-                        <span class="original-price">$99.99</span>
+                        <span class="current-price">3.500.000VNĐ</span>
+                        <span class="original-price">7.000.000VNĐ</span>
                         <span class="discount">50% Off</span>
                     </div>
                     <button class="btn btn-primary btn-block mb-3">Đăng ký ngay</button>
                     <button class="btn btn-outline-primary btn-block add-to-cart-btn"
                         data-course-id="web-dev-fullstack"
                         data-course-name="Khóa học Phát triển Web Toàn diện từ A-Z"
-                        data-course-price="49.99">Thêm vào giỏ hàng</button>
+                        data-course-price="3.500.000VNĐ">Thêm vào giỏ hàng</button>
                     <div class="sidebar-features">
                         <h4>Khóa học bao gồm:</h4>
                         <ul>
-                            <li><i class="fas fa-video"></i> 40 giờ video theo yêu cầu</li>
-                            <li><i class="fas fa-file-alt"></i> 100 tài liệu có thể tải xuống</li>
-                            <li><i class="fas fa-mobile-alt"></i> Truy cập trên di động và TV</li>
-                            <li><i class="fas fa-infinity"></i> Truy cập trọn đời</li>
-                            <li><i class="fas fa-trophy"></i> Chứng chỉ hoàn thành</li>
+                            <li><i class="fas fa-video"></i> Chương trình giảng dạy: 60 tiết (mỗi buổi 3 - 5 tiết) bao gồm cả Lý thuyết và Thực hành</li>
+                            <li><i class="fas fa-file-alt"></i> Lớp mở liên tục trong tháng chủ động theo nhóm Học viên</li>
+                            <li><i class="fas fa-mobile-alt"></i> Thời gian học tập thuận lợi đáp ứng theo thời gian đi làm của học viên (có thể học buổi tối sau giờ làm, học ngày thứ 7, Chủ Nhật, Học Online,....)</li>
+                            <li><i class="fas fa-infinity"></i> Địa điểm học tập chủ động theo Nhóm học viên (nhóm tối thiểu 3 học viên).</li>
+                            <li><i class="fas fa-trophy"></i> Đội ngũ Giảng viên giảng dạy có Trình độ Thạc Sĩ, có kỹ năng Sư phạm tốt và có kinh nghiệm làm việc ở các Công ty, Trường học,..... đem đến các bài giảng thú vị và hiệu quả cho quý Học viên.</li>
                         </ul>
                     </div>
                     <div class="share-course">
@@ -280,7 +281,7 @@
             <div class="footer-grid">
                 <div class="footer-col about-col">
                     <a href="../index.html" class="footer-logo">
-                        <img src="img/logo-white.png" alt="Edrio Logo">
+                        <img src="../image/anh1.png" alt="PLT Logo">
                     </a>
                     <p>Chúng tôi là nền tảng học tập trực tuyến hàng đầu, mang đến những khóa học chất lượng cao từ các chuyên gia.</p>
                     <div class="social-links">
@@ -296,7 +297,7 @@
                         <li><a href="automated-testing.html">Kiểm Thử Tự Động</a></li>
                         <li><a href="software-testing.html">Kiểm Thử Phần Mềm</a></li>
                         <li><a href="office-it.html">Tin Học Văn Phòng</a></li>
-                        <li><a href="#">Khoa học dữ liệu</a></li>
+                        <li><a href="basic-software-testing.html">Kiểm Thử Phần Mềm Căn Bản</a></li>
                         <li><a href="#">Nhiếp ảnh</a></li>
                     </ul>
                 </div>
