--- a/courses.html
+++ b/courses.html
@@ -24,10 +24,10 @@
                     <li class="has-dropdown">
                         <a href="#" class="active">Khóa học <i class="fas fa-chevron-down"></i></a> <ul class="dropdown-menu">
                             <li><a href="courses.html">Tất cả khóa học</a></li>
-                            <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềmg</a></li>
+                            <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
                             <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
                             <li><a href="./courses-detail/office-it.html">Tin Học Văn Phòng</a></li>
-                            <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
+                            <li><a href="./courses-detail/basic-software-testing.html">Kiểm Thử Phần Mềm Căn Bản</a></li>
                             <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
                         </ul>
                     </li>
@@ -94,9 +94,9 @@
                     </div>
                     <div class="course-item">
                     <div class="course-thumbnail">
-                        <img src="image/anh10.jpg" alt="Data Science Course">
+                        <img src="image/basic-software-testing.jpg" alt="Data Science Course">
                         <div class="course-category">
-                            <a href="#">Khoa học dữ liệu</a>
+                            <a href="./courses-detail/basic-software-testing.html">Kiểm Thử Phần Mềm Căn Bản</a>
                         </div>
                     </div>
                     <div class="course-content">
@@ -106,17 +106,17 @@
                                 <i class="fas fa-star"></i> 4.9 (300)
                             </span>
                         </div>
-                        <h3 class="course-title"><a href="#">Giới thiệu về Khoa học Dữ liệu với Python</a></h3>
+                        <h3 class="course-title"><a href="./courses-detail/basic-software-testing.html">Khóa Học Kiểm Thử Phần Mềm Căn Bản</a></h3>
                         <p class="course-description">
-                            Bắt đầu hành trình của bạn trong thế giới dữ liệu lớn và phân tích.
+                            Nắm Vững các Kiến Thức Căn Bản Về Kiểm Thử Phần Mềm.
                         </p>
                         <div class="course-footer">
-                            <span class="course-price">$79.99</span>
-                            <a href="courses-detail/data-science-detail.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
+                            <span class="course-price">3.500.000VNĐ</span>
+                            <a href="courses-detail/basic-software-testing.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
                             <button class="btn btn-sm btn-success add-to-cart-btn"
                                 data-course-id="data-science-intro"
-                                data-course-name="Giới thiệu về Khoa học Dữ liệu với Python"
-                                data-course-price="79.99">Thêm vào giỏ hàng</button>
+                                data-course-name="Khóa Học Kiểm Thử Phần Mềm Căn Bản"
+                                data-course-price="3.400.000VNĐ">Thêm vào giỏ hàng</button>
                         </div>
                     </div>
                 </div>
@@ -193,7 +193,7 @@
                         </div>
                         <h3 class="course-title"><a href="./courses-detail/software-testing.html">Khóa Học Kiểm Thử Phần Mềm – Dành Cho Người Trái Ngành</a></h3>
                         <p class="course-description">
-                            Nắm vững các kĩ năng cơ bản về Kiểm Thử Phần Mềm.
+                            Nắm vững các kĩ năng cơ bản về Kiểm Thử Phần Mềm Dành Cho Người Trái Ngành.
                         </p>
                         <div class="course-footer">
                             <span class="course-price">4.500.000VNĐ</span>
@@ -258,7 +258,7 @@
                         <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
                         <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
                         <li><a href="./courses-detail/office-it.html">Tin Học Văn Phòng</a></li>
-                        <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
+                        <li><a href="./courses-detail/basic-software-testing.html">Kiểm Thử Phần Mềm Căn Bản</a></li>
                         <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
                     </ul>
                 </div>
