--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -28,6 +28,8 @@
                             <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
                             <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
                             <li><a href="./courses-detail/office-it.html">Tin Học Văn Phòng</a></li>
+                            <li><a href="./courses-detail/basic-software-testing.html">Kiểm Thử Phần Mềm Căn Bản</a></li>
+                            <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
                         </ul>
                     </li>
                     <li><a href="about.html">Về chúng tôi</a></li>
@@ -117,7 +119,7 @@
                         <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
                         <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
                         <li><a href="./courses-detail/office-it.html">Tin Học Văn Phòng</a></li>
-                        <li><a href="#">Khoa học dữ liệu</a></li>
+                        <li><a href="./courses-detail/basic-software-testing.html">Kiểm Thử Phần Mềm Căn Bản</a></li>
                         <li><a href="#">Nhiếp ảnh</a></li>
                     </ul>
                 </div>
