--- a/register.html
+++ b/register.html
@@ -28,13 +28,15 @@
                             <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
                             <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
                             <li><a href="./courses-detail/office-it.html">Tin Học Văn Phòng</a></li>
+                            <li><a href="./courses-detail/basic-software-testing.html">Kiểm Thử Phần Mềm Căn Bản</a></li>
+                            <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
                         </ul>
                     </li>
                     <li><a href="about.html">Về chúng tôi</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="contact.html">Liên hệ</a></li>
-                    <li><a href="#">Chính sách bảo mật</a></li>
-                    <li><a href="#">Điều khoản sử dụng</a></li>
+                    <li><a href="privacy-policy.html">Chính sách bảo mật</a></li>
+                    <li><a href="terms-of-service.html">Điều khoản sử dụng</a></li>
                 </ul>
             </nav>
         </div>
@@ -102,7 +104,7 @@
                         <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
                         <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
                         <li><a href="./courses-detail/office-it.html">Tin Học Văn Phòng</a></li>
-                        <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
+                        <li><a href="./courses-detail/basic-software-testing.html">Kiểm Thử Phần Mềm Căn Bản</a></li>
                         <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
                     </ul>
                 </div>
