Update index file

--- a/index.html
+++ b/index.html
@@ -6,23 +6,18 @@
     <title>Xưởng Thực Tập PLT Solutions - Nâng tầm kỹ năng với các khóa học chất lượng</title>
     <meta name="description" content="Khám phá hàng ngàn khóa học chất lượng cao từ các chuyên gia hàng đầu tại PLT Solutions. Nâng cao kỹ năng, mở rộng cơ hội nghề nghiệp với Kiểm thử phần mềm, Kiểm thử tự động, Tin học văn phòng và nhiều hơn nữa.">
     <meta name="keywords" content="khóa học trực tuyến, PLT Solutions, kiểm thử phần mềm, kiểm thử tự động, tin học văn phòng, học lập trình, kỹ năng mềm, chứng chỉ trực tuyến">
-
     <link rel="icon" href="image/favicon.ico" type="image/x-icon">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/header-footer.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/responsive.css">
-
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-
     <header class="main-header">
         <div class="container">
             <a href="index.html" class="logo" aria-label="PLT Solutions Logo - Về trang chủ">
@@ -63,7 +58,6 @@
             </div>
         </div>
     </header>
-
     <main>
         <section class="hero-section">
             <div class="swiper-container hero-swiper">
@@ -102,7 +96,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="swiper-slide hero-slide-2">
                         <div class="container">
                             <div class="hero-content" data-aos="fade-left" data-aos-duration="1000">
@@ -137,7 +130,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="swiper-slide hero-slide-3">
                         <div class="container">
                             <div class="hero-content" data-aos="zoom-in" data-aos-duration="1000">
@@ -178,7 +170,6 @@
                 <div class="swiper-button-prev"></div>
             </div>
         </section>
-
         <section class="feature-category-section section-padding">
             <div class="container">
                 <div class="section-heading" data-aos="fade-down">
@@ -229,7 +220,6 @@
                 </div>
             </div>
         </section>
-
         <section class="about-section-home section-padding">
             <div class="container">
                 <div class="about-content-grid-home">
@@ -259,7 +249,6 @@
                 </div>
             </div>
         </section>
-
         <section class="popular-courses-section section-padding bg-light">
             <div class="container">
                 <div class="section-heading" data-aos="fade-down">
@@ -295,7 +284,6 @@
                             </div>
                         </div>
                     </article>
-
                     <article class="course-item" data-aos="fade-up" data-aos-delay="200">
                         <div class="course-thumbnail">
                             <img src="image/software-testing.jpg" alt="Ảnh minh họa khóa học Kiểm Thử Phần Mềm">
@@ -320,7 +308,6 @@
                             </div>
                         </div>
                     </article>
-
                     <article class="course-item" data-aos="fade-up" data-aos-delay="300">
                         <div class="course-thumbnail">
                             <img src="image/office-it.jpg" alt="Ảnh minh họa khóa học Tin Học Văn Phòng">
@@ -345,7 +332,6 @@
                             </div>
                         </div>
                     </article>
-
                      <article class="course-item" data-aos="fade-up" data-aos-delay="400">
                         <div class="course-thumbnail">
                             <img src="image/basic-software-testing.jpg" alt="Ảnh minh họa khóa học Kiểm thử phần mềm căn bản">
@@ -370,7 +356,6 @@
                             </div>
                         </div>
                     </article>
-
                     <article class="course-item" data-aos="fade-up" data-aos-delay="500">
                         <div class="course-thumbnail">
                             <img src="image/web-development.jpg" alt="Ảnh minh họa khóa học Phát triển Web">
@@ -395,7 +380,6 @@
                             </div>
                         </div>
                     </article>
-
                     <article class="course-item" data-aos="fade-up" data-aos-delay="600">
                         <div class="course-thumbnail">
                             <img src="image/photography.jpg" alt="Ảnh minh họa khóa học Nhiếp ảnh">
@@ -426,7 +410,6 @@
                 </div>
             </div>
         </section>
-
         <section class="why-choose-us-section section-padding">
             <div class="container">
                 <div class="section-heading is-white" data-aos="fade-down">
@@ -469,7 +452,6 @@
                 </div>
             </div>
         </section>
-
         <section class="instructors-section section-padding">
             <div class="container">
                 <div class="section-heading" data-aos="fade-down">
@@ -546,7 +528,6 @@
                 </div>
             </div>
         </section>
-
         <section class="testimonials-section section-padding">
             <div class="container">
                 <div class="section-heading is-white" data-aos="fade-down">
@@ -611,7 +592,6 @@
                 </div>
             </div>
         </section>
-
         <section class="cta-section section-padding">
             <div class="container">
                 <div class="cta-content" data-aos="zoom-in" data-aos-duration="1000">
@@ -623,7 +603,6 @@
                 </div>
             </div>
         </section>
-
         <section class="blog-posts-section-home section-padding">
             <div class="container">
                 <div class="section-heading" data-aos="fade-down">
@@ -653,7 +632,6 @@
                             </div>
                         </div>
                     </article>
-
                     <article class="blog-item-home course-item" data-aos="fade-up" data-aos-delay="200">
                         <div class="blog-thumbnail-home course-thumbnail">
                             <img src="image/blog-2.jpg" alt="Học tin học văn phòng hiệu quả">
@@ -672,7 +650,6 @@
                             </div>
                         </div>
                     </article>
-
                     <article class="blog-item-home course-item" data-aos="fade-up" data-aos-delay="300">
                         <div class="blog-thumbnail-home course-thumbnail">
                             <img src="image/blog-3.jpg" alt="Làm thế nào để trở thành tester">
@@ -697,7 +674,6 @@
                 </div>
             </div>
         </section>
-
         <section class="partners-section section-padding">
             <div class="container">
                 <div class="section-heading" data-aos="fade-down">
@@ -717,9 +693,7 @@
                 </div>
             </div>
         </section>
-
     </main>
-
     <footer class="main-footer">
         <div class="container">
             <div class="footer-grid">
@@ -770,24 +744,18 @@
             </div>
         </div>
     </footer>
-
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init({
-            duration: 1200,
+            duration: 1000,
             once: true,
         });
     </script>
     <script src="js/script.js"></script>
     <script src="js/cart.js"></script>
     <script>
-        // Dynamically update the copyright year
         document.getElementById('current-year').textContent = new Date().getFullYear();
-
-        // Initialize Swiper for Hero Section
-        // Đảm bảo bạn đã thêm script Swiper vào trước khi khởi tạo
         if (typeof Swiper !== 'undefined') {
             new Swiper('.hero-swiper', {
                 loop: true,
@@ -804,14 +772,11 @@
                     nextEl: '.swiper-button-next',
                     prevEl: '.swiper-button-prev',
                 },
-                // Optional: Add effects like fade for background images
                 effect: 'fade',
                 fadeEffect: {
                     crossFade: true
                 },
             });
-
-            // Initialize Swiper for Testimonials Section
             new Swiper('.testimonial-carousel', {
                 loop: true,
                 speed: 800,
@@ -828,6 +793,5 @@
             });
         }
     </script>
-
 </body>
 </html>
